[project]
name = "travel-planner-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit", 
    "langchain", 
    "langchain-openai", 
    "fastmcp",
    "geopy",
    "timezonefinder",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain-community",
    "aiosqlite",
    "python-dotenv",
    "langchain-mcp-adapters",
    "langchain-core",
    "ddgs",
    "watchdog"
]

[tool.poetry]
package-mode = false
